# assignments

payment-microservice/: .dockerignore  .gitignore  AI_TRACE.md  DOCKER_COMPOSE.md  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
payment-microservice/.github/workflows/: README.md  ci.yml
payment-microservice/examples/: README.md  client_example.py
payment-microservice/proto/: payments.proto
payment-microservice/scripts/: README.md  __init__.py  test_client.py
payment-microservice/src/payments_service/: __init__.py  __main__.py  server.py
payment-microservice/src/payments_service/app/: __init__.py  payment_service.py
payment-microservice/src/payments_service/domain/: __init__.py  payment.py  validators.py
payment-microservice/src/payments_service/storage/: __init__.py  in_memory_repository.py  repository.py
payment-microservice/src/payments_service/transport/: __init__.py  grpc_servicer.py
payment-microservice/tests/integration/: test_server.py
payment-microservice/tests/unit/: test_grpc_servicer.py  test_payment.py  test_payment_service.py  test_repository.py  test_validators.py
